# rhai-dylib

./: Cargo.toml  README.md  readme.md
.cargo/: config.toml
.github/workflows/: checks.yml  coverage.yml  outdated.yaml  release.yml
example/main/: Cargo.toml
example/plugin/: Cargo.toml
example/plugin/src/: api.rs  lib.rs
examples/dynamic_library/: api.rs  lib.rs
examples/loader/: README.md  main.rs
examples/module_resolver/: Cargo.toml  README.md  main.rs
examples/module_resolver/main/: Cargo.toml
examples/module_resolver/main/src/: main.rs
examples/module_resolver/plugin/: Cargo.toml
examples/module_resolver/plugin/src/: api.rs  lib.rs
examples/module_resolver/src/: main.rs
examples/simple/: Cargo.toml  README.md  build.rs
examples/simple/engine/: Cargo.toml
examples/simple/engine/src/: lib.rs
examples/simple/main/: Cargo.toml
examples/simple/main/src/: main.rs
examples/simple/plugin/: Cargo.toml
examples/simple/plugin/src/: api.rs  lib.rs
examples/simple/src/: main.rs
main/: Cargo.toml
main/src/: main.rs
plugin/: Cargo.toml
plugin-trait/: Cargo.toml
plugin-trait/src/: lib.rs
plugin/src/: api.rs  lib.rs
src/: lib.rs
src/loader/: dylib.rs  libloading.rs  mod.rs
src/module_resolvers/: dylib.rs  libloading.rs  mod.rs
src/plugin/: mod.rs
src/plugin_loader/: dylib.rs  mod.rs
tests/fixtures/plugin/: lib.rs
