[package]
name = "rhai-dylib"
version = "0.1.2"
rust-version = "1.64.0"
edition = "2021"
resolver = "2"
authors = ["Lucas Tabis", "Stephen Chung"]
description = "Dylib support for Rhai"
homepage = "https://rhai.rs"
repository = "https://github.com/rhaiscript"
readme = "README.md"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rhai-dylib/0.1.2/rhai_dylib/"
include = ["/src/**/*", "/Cargo.toml", "/README.md", "LICENSE*"]
keywords = [
    "scripting",
    "scripting-engine",
    "scripting-language",
    "embedded",
    "plugins",
]
categories = ["embedded"]

[dependencies]
libloading = { version = "0.7.3", optional = true }

# NOTE: Using rhaiscript main branch for the rhai::config::hashing::set_ahash_seed feature.
#       See https://discord.com/channels/767611025456889857/776309562881736724/1038079906409619516
rhai = { version = "1.11.0", git = "https://github.com/rhaiscript/rhai", features = [
    "internals", # Used to implement the ModuleResolver trait.
] }

[features]
default = ["libloading"]
sync = ["rhai/sync"]

libloading = [
    "dep:libloading",
] # enable module resolver & plugin loader using the libloading crate.

[[example]]
name = "dynamic_library"
crate-type = ["cdylib"]
path = "examples/dynamic_library/lib.rs"

[[example]]
name = "loader"

[[example]]
name = "module_resolver"
