[package]
name = "rhai-dylib"
version = "0.1.4"
rust-version = "1.61.0"
edition = "2021"
resolver = "2"
authors = ["Lucas Tabis", "Stephen Chung"]
description = "Dylib support for Rhai"
homepage = "https://rhai.rs/rhaiscript/rhai-dylib"
repository = "https://github.com/rhaiscript/rhai-dylib"
readme = "README.md"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rhai-dylib/"
include = ["/src/**/*", "/Cargo.toml", "/README.md", "LICENSE*"]
keywords = [
    "scripting",
    "scripting-engine",
    "scripting-language",
    "embedded",
    "plugins",
]
categories = ["embedded"]

[dependencies]
libloading = { version = "0.7.3", optional = true }

rhai = { version = "1.11.0", features = [
    "internals", # Used to implement the ModuleResolver trait.
] }

[features]
default = ["libloading"]
sync = ["rhai/sync"]

libloading = [
    "dep:libloading",
] # enable module resolver & plugin loader using the libloading crate.

[[example]]
name = "dynamic_library"
crate-type = ["cdylib"]
path = "examples/dynamic_library/lib.rs"

[[example]]
name = "loader"
path = "examples/loader/main.rs"

[[example]]
name = "module_resolver"
path = "examples/module_resolver/main.rs"
