[package]
name = "plugin-trait"
version = "0.1.0"
edition = "2021"

rust-version = "1.62.1"

[dependencies]
libloading = "0.7.3"

smartstring = { version = "1" }
rhai = { version = "1.10.1", default-features = false, features = [
    "unchecked",
    "sync",
    "internals",
    "no_closure",
    "metadata",
] }
