[package]
name = "main"
version = "0.1.0"
edition = "2021"

rust-version = "1.62.1"

[dependencies]
plugin-trait = { version = "*", path = "../plugin-trait" }

# NOTE: smartstring & default-features = false are necessary to `ahash` to generate fixed hashes for types.
smartstring = { version = "1" }
rhai = { version = "1.10.1", default-features = false, features = [
    "unchecked",
    "sync",
    "internals",
    "no_closure",
    "metadata",
] }
